--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,129 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@1,700&family=Patrick+Hand&family=Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    /* Fonts */
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Patrick Hand', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 
+body,
+html {
+    height: 100vh;
+}
+
+.root,
+.sidebar,
+.logo,
+.main-content,
+.quick-tasks-manager {
+    display: grid;
+    background-color: #27272a;
+}
+
+.root {
+    height: inherit;
+    grid-template-columns: minmax(300px, 2fr) 10fr;
+}
+
+/* Sidebar styling. */
+
+.sidebar,
+.logo {
+    background-color: #1c1917;
+}
+
+.sidebar {
+    grid-template-rows: 1fr 10fr 1fr;
+    gap: 20px;
+    padding: 5px;
+    border-right: 5px solid #7e22ce;
+}
+
+.logo {
+    justify-items: center;
+    align-items: center;
+    color: #c084fc;
+    font-size: 20px;
+}
+
+.quick-tasks-and-projects,
+.heading-and-add-task-btn {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.quick-tasks-and-projects {
+    gap: 25px;
+}
+
+.quick-tasks-and-projects button,
+.heading-and-add-task-btn button {
+    background-color: transparent;
+    border: 2px solid #FFFFFF;
+    border-radius: 10px;
+    color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 600;
+    height: 50px;
+    width: 250px;    
+}
+
+.quick-tasks-and-projects button:hover,
+.heading-and-add-task-btn button:hover {
+    transition: 0.3s;
+    transform: scale(1.05);
+    color: #7e22ce;
+    border: 2px solid #7e22ce;
+}
+
+.quick-tasks-and-projects button:active,
+.heading-and-add-task-btn button:active {
+    transition: 0.3s;
+    transform: scale(0.99);
+    color: #7e22ce;
+    border: 2px solid #7e22ce;
+}
+
+/* Main content styling. */
+.main-content {
+    align-items: center;
+    justify-items: center;
+}
+
+.quick-tasks-manager {
+    grid-template-rows: 3fr 8fr;
+    height: 60%;
+    min-width: 330px;
+    width: 60%;
+    background-color: #1c1917;
+    border: 3px solid #7e22ce;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, 
+    rgba(0, 0, 0, 0.07) 0px 2px 2px, 
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, 
+    rgba(0, 0, 0, 0.07) 0px 8px 8px, 
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+}
+
+.heading-and-add-task-btn {
+    justify-content: space-evenly;
+    padding: 0px 40px;
+}
+
+.heading-and-add-task-btn h2 {
+    color: #c084fc;
+}
+
+.heading-and-add-task-btn button {
+    min-width: fit-content;
+    min-height: fit-content;
+    width: 100%;
+    height: 40%;
+}
