--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,7 +32,6 @@ html {
 }
 
 /* Sidebar styling. */
-
 .sidebar,
 .logo {
     background-color: #1c1917;
@@ -64,7 +63,8 @@ html {
 }
 
 .quick-tasks-and-projects button,
-.heading-and-add-task-btn button {
+.heading-and-add-task-btn button,
+.create-task-form button {
     background-color: transparent;
     border: 2px solid #FFFFFF;
     border-radius: 10px;
@@ -76,7 +76,8 @@ html {
 }
 
 .quick-tasks-and-projects button:hover,
-.heading-and-add-task-btn button:hover {
+.heading-and-add-task-btn button:hover,
+.create-task-form button:hover {
     transition: 0.3s;
     transform: scale(1.05);
     color: #7e22ce;
@@ -84,7 +85,8 @@ html {
 }
 
 .quick-tasks-and-projects button:active,
-.heading-and-add-task-btn button:active {
+.heading-and-add-task-btn button:active,
+.create-task-form button:active {
     transition: 0.3s;
     transform: scale(0.99);
     color: #7e22ce;
@@ -98,12 +100,12 @@ html {
 }
 
 .quick-tasks-manager {
+    display: grid;
     grid-template-rows: 3fr 8fr;
     height: 60%;
     min-width: 330px;
     width: 60%;
     background-color: #1c1917;
-    border: 3px solid #7e22ce;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, 
     rgba(0, 0, 0, 0.07) 0px 2px 2px, 
@@ -126,4 +128,146 @@ html {
     min-height: fit-content;
     width: 100%;
     height: 40%;
+}
+
+/* Form styling */
+.create-task-form,
+.create-task-form input,
+.create-task-form select,
+.create-task-form button {
+    width: 100%;
+    height: 75%;
+    font-size: 16px;
+    border: 3px solid #FFFFFF;
+    color: #FFFFFF;
+    padding-left: 5px;
+    border-radius: 10px;
+    background-color: transparent;
+}
+
+.create-task-form input {
+    border: 3px solid #FFFFFF;
+}
+
+.create-task-form {
+    display: none;
+    height: fit-content;
+    width: fit-content;
+    border: 3px solid #7e22ce;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 18px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, 
+    rgba(0, 0, 0, 0.07) 0px 2px 2px, 
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, 
+    rgba(0, 0, 0, 0.07) 0px 8px 8px, 
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    gap: 30px;
+    background-color: #1c1917;
+    padding: 20px;
+}
+
+.create-task-form button {
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    height: 50px;
+}
+
+/* Quick tasks list styling */
+.list-of-quick-tasks {
+    padding: 25px;
+    border-top: 3px solid #7e22ce;
+    gap: 20px;
+    max-height: 600px;
+    display: grid;
+    overflow-y: scroll;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto, 1fr);
+}
+
+/* Task styling */
+.task,
+.name-desc-date,
+.checkbox-priority-edit-delete,
+.edit-delete-btn {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    color: #FFFFFF;
+}
+
+.task {
+    align-items: center;
+    gap: 0px;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 20px;
+    height: 175px;
+    width: 100%;
+    background-color: #27272a;
+    border-left: 20px solid #4a044e;
+    border-radius: 10px;
+}
+
+.checkbox-priority-edit-delete {
+    gap: 15px;
+}
+
+.task-name {
+    color: #c084fc;
+}
+
+#checkbox {
+    height: 18px;
+    width: 18px;
+}
+
+.task-checkbox label,
+.task-priority {
+    font-size: 18px;
+}
+
+.edit-delete-btn {
+    gap: 10px;
+}
+
+.edit-delete-btn button {
+    height: 30px;
+    background-color: transparent;
+}
+
+.edit-task-btn {
+    color: #1d4ed8;
+    border: 3px solid #1d4ed8;
+    border-radius: 10px;
+}
+
+.edit-task-btn:hover {
+    transition: 0.3s;
+    background-color: #1d4ed8;
+    color: white;
+}
+
+.edit-task-btn:active {
+    transition: 0.3s;
+    background-color: #1d4ed8;
+    color: white;
+}
+
+.del-task-btn {
+    color: red;
+    border: 3px solid red;
+    border-radius: 10px;
+}
+
+.del-task-btn:hover {
+    transition: 0.3s;
+    background-color: red;
+    color: white;
+}
+
+.del-task-btn:active {
+    transition: 0.3s;
+    background-color: red;
+    color: white;
 }
