--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -210,6 +210,7 @@ html {
 }
 
 .checkbox-priority-edit-delete {
+    width: 150px;
     gap: 15px;
 }
 
@@ -224,6 +225,7 @@ html {
 
 .task-checkbox label,
 .task-priority {
+    vertical-align: middle;
     font-size: 18px;
 }
 
