--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,7 +28,7 @@ html {
 
 .root {
     height: inherit;
-    grid-template-columns: minmax(300px, 2fr) 10fr;
+    grid-template-columns: minmax(300px, 1.75fr) 10fr;
 }
 
 /* Sidebar styling. */
@@ -38,7 +38,7 @@ html {
 }
 
 .sidebar {
-    grid-template-rows: 1fr 10fr 1fr;
+    grid-template-rows: 1fr 10fr;
     gap: 20px;
     padding: 5px;
     border-right: 5px solid #7e22ce;
@@ -72,7 +72,7 @@ html {
     font-size: 20px;
     font-weight: 600;
     height: 50px;
-    width: 250px;    
+    width: 250px;
 }
 
 .quick-tasks-and-projects button:hover,
@@ -102,18 +102,18 @@ html {
 }
 
 .quick-tasks-manager {
-    display: grid;
+    display: none;
     grid-template-rows: 3fr 8fr;
     height: 60%;
     min-width: 330px;
     width: 60%;
     background-color: #1c1917;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, 
-    rgba(0, 0, 0, 0.07) 0px 2px 2px, 
-    rgba(0, 0, 0, 0.07) 0px 4px 4px, 
-    rgba(0, 0, 0, 0.07) 0px 8px 8px, 
-    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
+        rgba(0, 0, 0, 0.07) 0px 2px 2px,
+        rgba(0, 0, 0, 0.07) 0px 4px 4px,
+        rgba(0, 0, 0, 0.07) 0px 8px 8px,
+        rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
 .heading-and-add-task-btn {
@@ -164,11 +164,11 @@ html {
     justify-content: center;
     flex-direction: column;
     font-size: 18px;
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, 
-    rgba(0, 0, 0, 0.07) 0px 2px 2px, 
-    rgba(0, 0, 0, 0.07) 0px 4px 4px, 
-    rgba(0, 0, 0, 0.07) 0px 8px 8px, 
-    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
+        rgba(0, 0, 0, 0.07) 0px 2px 2px,
+        rgba(0, 0, 0, 0.07) 0px 4px 4px,
+        rgba(0, 0, 0, 0.07) 0px 8px 8px,
+        rgba(0, 0, 0, 0.07) 0px 16px 16px;
     gap: 30px;
     background-color: #1c1917;
     padding: 20px;
@@ -281,4 +281,74 @@ html {
     transition: 0.3s;
     background-color: red;
     color: white;
+}
+
+.proj-heading-and-add-btn {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.proj-heading-and-add-btn div:nth-child(1) {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    width: 250px;
+    justify-content: space-between;
+}
+
+.proj-heading-and-add-btn div:nth-child(1) button {
+    width: 75px;
+}
+
+.proj-heading-and-add-btn div:nth-child(1) h2 {
+    color: #FFFFFF;
+}
+
+.input-proj-name {
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.input-proj-name label {
+    font-size: 16px;
+    color: #FFFFFF;
+}
+
+.input-proj-name input {
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 12px;
+    padding-left: 15px;
+}
+
+.input-proj-name button {
+    align-self: center;
+    width: 150px;
+    height: 40px;
+}
+
+.input-proj-name button.add-proj:hover {
+    color: #1d4ed8;
+    border: 3px solid #1d4ed8;
+}
+
+.input-proj-name button.cancel-proj:hover {
+    color: red;
+    border: 3px solid red;
+}
+
+.proj-btns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.proj-btns button {
+    height: 40px;
+    width: 250px;
+    overflow: hidden;
 }
