--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -352,3 +352,20 @@ html {
     width: 250px;
     overflow: hidden;
 }
+
+.projects {
+    display: none;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    height: 60%;
+    width: 60%;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
+    rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px,
+    rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    background-color: #1c1917;
+}
+
