--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -64,7 +64,8 @@ html {
 
 .quick-tasks-and-projects button,
 .heading-and-add-task-btn button,
-.create-task-form button {
+.create-task-form button,
+.project-task-manager button {
     background-color: transparent;
     border: 2px solid #FFFFFF;
     border-radius: 10px;
@@ -78,7 +79,9 @@ html {
 .quick-tasks-and-projects button:hover,
 .edit-task-form button:hover,
 .heading-and-add-task-btn button:hover,
-.create-task-form button:hover {
+.create-task-form button:hover,
+.project-task-manager button:hover,
+.proj-task-form button:hover {
     transition: 0.3s;
     transform: scale(1.05);
     color: #7e22ce;
@@ -88,7 +91,9 @@ html {
 .quick-tasks-and-projects button:active,
 .heading-and-add-task-btn button:active,
 .edit-task-form button:active,
-.create-task-form button:active {
+.create-task-form button:active,
+.project-task-manager button:active,
+.proj-task-form button:active {
     transition: 0.3s;
     transform: scale(0.99);
     color: #7e22ce;
@@ -140,7 +145,11 @@ html {
 .edit-task-form,
 .edit-task-form input,
 .edit-task-form select,
-.edit-task-form button {
+.edit-task-form button,
+.proj-task-form, 
+.proj-task-form input, 
+.proj-task-form select, 
+.proj-task-form button {
     width: 100%;
     height: 75%;
     font-size: 16px;
@@ -156,7 +165,8 @@ html {
 }
 
 .create-task-form,
-.edit-task-form {
+.edit-task-form,
+.proj-task-form {
     display: none;
     height: fit-content;
     width: fit-content;
@@ -175,14 +185,16 @@ html {
 }
 
 .create-task-form button,
-.edit-task-form button {
+.edit-task-form button,
+.proj-task-form button {
     color: #FFFFFF;
     border: 2px solid #FFFFFF;
     height: 50px;
 }
 
 /* Quick tasks list styling */
-.list-of-quick-tasks {
+.list-of-quick-tasks,
+.list-of-proj-tasks {
     padding: 25px;
     border-top: 3px solid #7e22ce;
     gap: 20px;
@@ -359,13 +371,37 @@ html {
     grid-template-rows: 1fr;
     height: 60%;
     width: 60%;
+    min-width: 400px;
     border-radius: 20px;
-    padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
     rgba(0, 0, 0, 0.07) 0px 2px 2px,
     rgba(0, 0, 0, 0.07) 0px 4px 4px,
     rgba(0, 0, 0, 0.07) 0px 8px 8px,
     rgba(0, 0, 0, 0.07) 0px 16px 16px;
     background-color: #1c1917;
+}
+
+.project {
+    display: grid;
+    grid-template-rows: 1.5fr 8fr;
+}
+
+.project-task-manager {
+    display: flex;
+    color: #c084fc;
+    padding: 25px;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.list-of-proj-tasks {
+    height: inherit;
+}
+
+.project-task-manager button {
+    height: 50px;
+    width: 100%;
 }
 
