--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -299,13 +299,14 @@ html {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 270px;
 }
 
 .proj-heading-and-add-btn div:nth-child(1) {
     display: flex;
     gap: 20px;
     align-items: center;
-    width: 250px;
+    width: 270px;
     justify-content: space-between;
 }
 
@@ -353,15 +354,26 @@ html {
 }
 
 .proj-btns {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 1fr);
+    grid-auto-rows: 75px;
+    height: 500px;
+    padding: 10px 0px;
+    overflow: auto;
+    justify-content: center;
+    background-color: #27272a;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
+    rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px,
+    rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    border: 3px solid #7e22ce;
+    border-radius: 10px;
 }
 
 .proj-btns button {
-    height: 40px;
-    width: 250px;
+    min-height: 40px;
+    min-width: 250px;
     overflow: hidden;
 }
 
